welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: value update is not a member of java.awt.Color
   if(getCouleurSol()=Color.green)
      ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
   else{recule()}}
              ^